# PointCloudCompression_RoboticaII

./: .gitignore  README.md  run.sh
decoder_container/: Dockerfile.decoderContainer  README.md  build.sh  log.txt  run.sh
decoder_container/ros2bag/benchdraco_point_cloud_interfaces/: CMakeLists.txt  package.xml
decoder_container/ros2bag/benchdraco_point_cloud_transport/: CMakeLists.txt
decoder_container/ros2bag/install/: local_setup.sh  setup.sh
decoder_container/ros2bag/log/: latest_build
decoder_container/tmp/benchdraco_point_cloud_transport/: benchdraco_plugins.xml
docker_ros2_rviz/: Dockerfile.ros2  run.sh
docker_ros2_rviz/ros2bag/: recordDracoAndUnCompr.sh  recordUncompressed.sh
docker_ros2_rviz/ros2bag/dracoPointCloud_1730200650/: metadata.yaml
docker_ws/: Dockerfile.desktop-humble  build.sh  desktop_build_dockerfile_from_sdk_ubuntu_and_cuda_version.sh  ros_entrypoint.sh
docker_zed_ros2/: run.sh
docker_zed_ros2/zed-ros2-wrapper/docker/: Dockerfile.desktop-humble  README.md  desktop_build_dockerfile_from_sdk_ubuntu_and_cuda_version.sh  old_desktop_build.sh  ros_entrypoint_jetson.sh  ros_entrypoint_old.sh
docker_zed_ros2/zed-ros2-wrapper/zed-ros2-interfaces/: CONTRIBUTING.md
docker_zed_ros2/zed-ros2-wrapper/zed_components/: package.xml
docker_zed_ros2/zed-ros2-wrapper/zed_ros2/: CMakeLists.txt
ros2_rviz_container/: Dockerfile.ros2  README.md  build.sh  cloud_map_evaluation.sh  ros2bag_to_pcd.sh  run.sh
ros2_rviz_container/ros2bag/: recordDraco.sh
ros2_rviz_container/ros2bag/PointCloudBoth_1730202346/: metadata.yaml
ros2_rviz_container/ros2bag/new_try_col/: CMakeLists.txt
ros2_rviz_container/ros2bag/tentativo_colcon/: CMakeLists.txt  CMakeLists3.txt  package2.xml
ros2_rviz_container/ros2bag/tentativo_colcon/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_rviz_container/ros2bag/tentativo_colcon/install/tentativo_colcon/lib/tentativo_colcon/: draco_decoder_node
ros2_rviz_container/ros2bag/tentativo_colcon/install/tentativo_colcon/share/ament_index/resource_index/parent_prefix_path/: tentativo_colcon
ros2_rviz_container/ros2bag/tentativo_colcon/install/tentativo_colcon/share/tentativo_colcon/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_rviz_container/ros2bag/tentativo_colcon/install/tentativo_colcon/share/tentativo_colcon/cmake/: tentativo_colconConfig.cmake
ros2_rviz_container/ros2bag/tentativo_colcon/log/: latest_build
ros2_zed_decoder/: build.sh  run.sh
ros2_zed_decoder/zed-ros2-wrapper/docker/: Dockerfile.desktop-humble  desktop_build_dockerfile_from_sdk_ubuntu_and_cuda_version.sh  jetson_build_dockerfile_from_sdk_and_l4T_version.sh  ros_entrypoint.sh
ros2_zed_decoder/zed-ros2-wrapper/docker/ros2_ws/src/pointcloud_decoder/: CMakeLists.txt  package.xml
ros2_zed_decoder/zed-ros2-wrapper/docker/ros2_ws/src/pointcloud_decoder/src/: pointcloud_decoder_node.cpp
ros2_zed_decoder/zed-ros2-wrapper/zed-ros2-interfaces/: LICENSE
ros2_zed_decoder/zed-ros2-wrapper/zed_wrapper/: package.xml
ros2_zed_decoder/zed_interfaces/: CMakeLists.txt
ros2_zed_decoder/zed_interfaces/msg/: DepthInfoStamped.msg  ObjectsStamped.msg
ros2_zed_decoder/zed_interfaces/srv/: SetROI.srv
zed_catture/lossless/: HD720_SN39574292_16-04-25.svo2:Zone.Identifier
zed_catture/lossy/: HD1080_SN39574292_15-57-35.svo2:Zone.Identifier
zed_ros2_container/: README.md  build.sh  old_build.sh  run.sh
zed_ros2_container/pointcloud_decoder/: CMakeLists.txt  package.xml
(+192 files in other folders)
