<?xml version="1.0"?>
<package format="3">
  <name>tentativo_colcon</name>
  <version>0.0.1</version>
  <description>ROS 2 package for decoding Draco-compressed point clouds</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>draco</depend>
  <exec_depend>point_cloud_transport_plugins</exec_depend>
  <exec_depend>draco_point_cloud_transport</exec_depend>
  <exec_depend>zlib_point_cloud_transport</exec_depend>
  <exec_depend>zstd_point_cloud_transport</exec_depend>
  <!-- Optional dependencies -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
</package>
